# discord_gif_bot

./: .gitignore
bot/: Cargo.toml
bot/src/: main.rs
gif-service/: Cargo.toml
gif-service/src/: lib.rs
