[package]
name = "bot"
version = "0.1.0"
authors = ["jjzajac <jakub.zajac.jan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version="0.10.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
gif-service= {path= "../gif-service" }
